--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,107 @@
-body {
+html,body{
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  width: 100%;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body{
+  background: url(./assets/img/sagaya-abdulhafeez-1208693-unsplash.jpg) no-repeat 50% 50%;
+  background-size: cover;
 }
+
+
+ .titulo h1{
+  position: absolute;
+  top: 46%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #fff;
+  font-size: 48px;
+  font-family: "Playfair Display";
+  font-weight: lighter;
+} 
+
+.toggle-btn{
+  position: fixed;
+  margin: 1.4em;
+  padding: 1em;
+  width: 40px;
+  height: 12px;
+  right: 0;
+  z-index: 1;
+}
+
+span.one{
+  position: absolute;
+  width: 40px;
+  height: 2px;
+  background: #fff;
+}
+
+span.two{
+  position: absolute;
+  width: 40px;
+  height: 2px;
+  background: #fff;
+  margin-top: 12px;
+}
+
+.menu{
+ z-index: 0;
+ position: absolute;
+ background: #101010;
+ height: 100vh;
+ width: 100%;
+ top:-100%;
+
+}
+
+.data{
+  padding: 8em;
+  text-align: left;
+}
+
+ul{
+  list-style: none;
+}
+
+li:first-child{
+  color: grey;
+  font-family: Poppins !important;
+  font-size: 24px;
+}
+
+li:not(:first-child){
+  color: #fff;
+  font-size: 42px;
+}
+
+a{
+  text-decoration: none;
+  color:#fff;
+  font-family: Poppins !important;
+}
+
+
+.overlay{
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  top: 0%
+}
+
+.overlay h1{
+ 
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  font-size: 20px;
+  font-weight: bolder;
+  letter-spacing: 12px;
+}
+
+
